nullaway_error_BD03C016-1A22-49AF-A164-4AA0D6C56E31.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-expression/src/main/java/org/springframework/expression/spel/support/ReflectivePropertyAccessor.java:192: error: [NullAway] dereferenced expression finalInvoker is @Nullable
					return new TypedValue(value, finalInvoker.typeDescriptor.narrow(value));
					                                         ^
    (see http://t.uber.com/nullaway )
